# codedd-cli

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
codedd_cli/: __init__.py  __main__.py  cli.py
codedd_cli/api/: __init__.py  client.py  endpoints.py  exceptions.py
codedd_cli/auditor/: __init__.py  architecture_analyzer.py  architecture_prompts.py  complexity_analyzer.py  dependency_scanner.py  file_auditor.py  git_stats_collector.py  response_parser.py  vulnerability_validator.py
codedd_cli/auth/: __init__.py  session.py  token_manager.py
codedd_cli/commands/: audit_cmd.py  audits_cmd.py  auth_cmd.py  config_cmd.py  scope_cmd.py
codedd_cli/config/: __init__.py  constants.py  settings.py
codedd_cli/llm/: __init__.py  key_manager.py
codedd_cli/models/: __init__.py  account.py  audit.py  local_directory.py
codedd_cli/scanner/: __init__.py  file_classifier.py  file_walker.py  line_counter.py
codedd_cli/utils/: directory_validator.py  display.py  payload_inspector.py  security.py  validators.py
scripts/: release.py
tests/: conftest.py  test_api_client.py  test_auth.py  test_commands.py  test_complexity_analyzer.py  test_directory_validator.py  test_git_stats_collector.py  test_scanner.py  test_scope_commands.py  test_scope_confirm.py  test_vulnerability_validator.py
