[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "codedd-cli"
version = "0.1.0"
description = "CLI tool for CodeDD — run code audits from your terminal"
authors = ["CodeDD <support@codedd.ai>"]
license = "MIT"
readme = "README.md"
homepage = "https://codedd.ai"
repository = "https://github.com/codedd/codedd-cli"
keywords = ["code-audit", "security", "cli", "codedd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
packages = [{include = "codedd_cli"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
typer = {version = ">=0.9.0", extras = ["all"]}
httpx = ">=0.27.0"
rich = ">=13.0.0"
keyring = ">=25.0.0"
tomli = {version = ">=2.0.0", python = "<3.11"}
tomli-w = ">=1.0.0"
radon = ">=6.0.0"
lizard = ">=1.17.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-httpx = ">=0.30.0"
pytest-mock = ">=3.12.0"
ruff = ">=0.5.0"

[tool.poetry.scripts]
codedd = "codedd_cli.__main__:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
